--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,23 +5,21 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#1f2937",
-  "orientation": "portrait-primary",
+  "theme_color": "#3b82f6",
+  "orientation": "portrait",
   "scope": "/",
-  "lang": "en",
-  "categories": ["education", "lifestyle", "books"],
   "icons": [
     {
       "src": "/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "maskable any"
+      "purpose": "any maskable"
     },
     {
       "src": "/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "maskable any"
+      "purpose": "any maskable"
     }
   ],
   "screenshots": [
@@ -63,5 +61,8 @@
         }
       ]
     }
-  ]
+  ],
+  "categories": ["education", "lifestyle", "books"],
+  "lang": "en",
+  "offline_enabled": true
 } 
