Fix infinite redirect loop by removing conflicting routes
- Remove catch-all route (src/app/[...slug]/page.tsx) that was causing redirects
- Remove custom 404 page (src/app/not-found.tsx) that was also redirecting
- Update vercel.json to properly handle all SPA routes without conflicts
- Now uses explicit route mapping for all app pages (dashboard, bible, notes, etc.)

This should resolve the infinite redirect issue on deployed version.

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,42 @@
     {
       "source": "/dashboard",
       "destination": "/"
+    },
+    {
+      "source": "/bible",
+      "destination": "/"
+    },
+    {
+      "source": "/notes",
+      "destination": "/"
+    },
+    {
+      "source": "/bookmarks",
+      "destination": "/"
+    },
+    {
+      "source": "/highlights",
+      "destination": "/"
+    },
+    {
+      "source": "/reading-plans",
+      "destination": "/"
+    },
+    {
+      "source": "/progress",
+      "destination": "/"
+    },
+    {
+      "source": "/literature",
+      "destination": "/"
+    },
+    {
+      "source": "/profile",
+      "destination": "/"
+    },
+    {
+      "source": "/settings",
+      "destination": "/"
     }
   ]
 } 
