Fix 404 errors by removing trailingSlash and simplifying vercel.json
- Remove trailingSlash: true from next.config.ts (was causing routing issues)
- Simplify vercel.json using regex patterns (/?') to handle both trailing slash and non-trailing slash cases
- This should resolve the 404 NOT_FOUND errors on all routes

--- a/vercel.json
+++ b/vercel.json
@@ -1,43 +1,43 @@
 {
   "rewrites": [
     {
-      "source": "/dashboard",
+      "source": "/dashboard/?",
       "destination": "/"
     },
     {
-      "source": "/bible",
+      "source": "/bible/?",
       "destination": "/"
     },
     {
-      "source": "/notes",
+      "source": "/notes/?",
       "destination": "/"
     },
     {
-      "source": "/bookmarks",
+      "source": "/bookmarks/?",
       "destination": "/"
     },
     {
-      "source": "/highlights",
+      "source": "/highlights/?",
       "destination": "/"
     },
     {
-      "source": "/reading-plans",
+      "source": "/reading-plans/?",
       "destination": "/"
     },
     {
-      "source": "/progress",
+      "source": "/progress/?",
       "destination": "/"
     },
     {
-      "source": "/literature",
+      "source": "/literature/?",
       "destination": "/"
     },
     {
-      "source": "/profile",
+      "source": "/profile/?",
       "destination": "/"
     },
     {
-      "source": "/settings",
+      "source": "/settings/?",
       "destination": "/"
     }
   ]
