--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/supabase-js": "^2.45.6",
+    "@types/jszip": "^3.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.5.4",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.445.0",
     "next": "14.2.15",
     "next-pwa": "^5.6.0",
