--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "framer-motion": "^11.5.4",
     "jszip": "^3.10.1",
     "lucide-react": "^0.445.0",
-    "next": "14.2.15",
+    "next": "^14.2.30",
     "next-pwa": "^5.6.0",
     "react": "^18.3.1",
     "react-day-picker": "^9.7.0",
