--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-day-picker": "^9.7.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "slugify": "^1.6.6",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
