--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "slugify": "^1.6.6",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
