feat: Add deployment configuration and fix search functionality
- Add Vercel deployment configuration (vercel.json)
- Create comprehensive deployment guide (DEPLOYMENT_GUIDE.md)
- Add deployment script (deploy.js) and Bible data population script
- Fix reference search API to use 'translation' instead of 'version' column
- Update SearchBar and search page components for proper theme support
- Enhance API error handling and response formatting
- Update package.json with deployment scripts
- Improve Supabase setup documentation

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "migrate:bible": "node scripts/migrate-bible-data.js"
+    "migrate:bible": "node scripts/migrate-bible-data.js",
+    "deploy": "node deploy.js",
+    "deploy:vercel": "vercel --prod"
   },
   "dependencies": {
     "@headlessui/react": "^2.1.8",
